# vulkan_rust

./: CMakeLists.txt  Cargo.toml  README.md  TODO.md  build.rs
src/: app.rs  camera.rs  main.rs
src/actors/: actor_frame.rs  mod.rs
src/objects/: mod.rs  object.rs  planet.rs  triangle.rs
src/objects/polygon/: edge.rs  face.rs  mod.rs
src/shaders/: material.rs  mod.rs  pipeline.rs  shader.frag  shader.rs  shader.vert
src/utils/: error.rs  matrix_stack.rs  mod.rs
