[package]
name = "vulkan_rust"
version = "0.1.0"
authors = ["Matteo De Carlo <matteo.dek@gmail.com>"]
build = "build.rs"

[dependencies]

[dependencies.vulkano]
version = "0.6.0"
git = "https://github.com/portaloffreedom/vulkano.git"
#path = "../vulkano/vulkano"

[dependencies.glfw]
version = "0.16.0"
features = ["vulkan"]
